# llmcourse-hw6-prompt-engineering

./: .coverage  .coveragerc  .gitignore  DESIGN.md  PRD.md  README.md  RESULTS.md  TASKS.md  TEST_COVERAGE.md  pyproject.toml
config/: config.yaml  example.env
data/datasets/: chain_of_thought.json  sentiment_analysis.json
docs/: ARCHITECTURE_C4.md  HYPOTHESIS.md  LITERATURE_REVIEW.md
docs/ADRs/: ADR-001-ollama-local-llm.md  ADR-002-sentence-bert-similarity.md  ADR-003-json-storage-format.md  ADR-004-modular-file-size-limit.md  ADR-005-pytest-mocking-strategy.md
results/experiments/: cot_baseline_20251216_015723.json  cot_chain_of_thought_20251216_022944.json  cot_chain_of_thought_20251216_155228.json  cot_few_shot_20251216_021518.json  cot_standard_20251216_020818.json  sentiment_baseline_20251215_234941.json  sentiment_chain_of_thought_20251216_014658.json  sentiment_chain_of_thought_20251216_153743.json  sentiment_few_shot_20251216_002655.json  sentiment_standard_20251216_001112.json
scripts/: analyze_results.py  generate_datasets.py  run_experiments.py
src/: __init__.py
src/analysis/: __init__.py  insights_generator.py  results_formatter.py  results_loader.py  results_updater.py  results_updater.py.backup  statistical_tests.py  statistics.py  stats_calculator.py  visualization.py
src/config/: __init__.py  settings.py
src/datasets/: __init__.py  base.py  cot_dataset.py  dataset_io.py  generator.py  generator.py.backup  sentiment_dataset.py
src/evaluation/: __init__.py  runner.py  similarity.py
tests/: __init__.py  conftest.py
(+21 files in other folders)
